--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="songList">
         <h1>Best of NCS - NO Copyright Sound</h1>
-        <div>
+        <div class="songList1">
           <div class="songItem">
             <img src="./assets/OIP (1).jpeg" alt="1" />
             <span>Let me Love You</span>
@@ -61,6 +61,38 @@
               <span>05:34 <i class="bx bx-play-circle"></i></span>
             </span>
           </div>
+          <div class="songItem">
+            <img src="./assets/OIP (1).jpeg" alt="1" />
+            <span>Let me Love You</span>
+            <span class="songListPlay">
+              <span>05:34 <i class="bx bx-play-circle"></i></span>
+            </span>
+          </div>
+
+          <div class="songItem">
+            <img src="./assets/OIP (1).jpeg" alt="1" />
+            <span>Let me Love You</span>
+            <span class="songListPlay">
+              <span>05:34 <i class="bx bx-play-circle"></i></span>
+            </span>
+          </div>
+
+          <div class="songItem">
+            <img src="./assets/OIP (1).jpeg" alt="1" />
+            <span>Let me Love You</span>
+            <span class="songListPlay">
+              <span>05:34 <i class="bx bx-play-circle"></i></span>
+            </span>
+          </div>
+
+          <div class="songItem">
+            <img src="./assets/OIP (1).jpeg" alt="1" />
+            <span>Let me Love You</span>
+            <span class="songListPlay">
+              <span>05:34 <i class="bx bx-play-circle"></i></span>
+            </span>
+          </div>
+
           <div class="songItem">
             <img src="./assets/OIP (1).jpeg" alt="1" />
             <span>Let me Love You</span>
@@ -76,9 +108,15 @@
     <div class="bottom">
       <input type="range" name="range" id="myProgressBar" min="0" max="100" />
       <div class="icon">
+        <!-- icon -->
         <i class="bx bxs-rewind-circle"></i>
-        <i class="bx bx-play-circle"></i>
+        <i class="bx bx-play-circle" id="masterPlay"></i>
         <i class="bx bxs-fast-forward-circle"></i>
+      </div>
+
+      <div class="songInfo">
+        <img src="./assets/bit.webp" width="60px" alt="" id="gif" />Let me love
+        - Justin Beiber
       </div>
     </div>
 
