--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
     </div>
 
     <div class="bottom">
-      <input type="range" name="range" id="myProgressBar" min="0" max="100" />
+      <input
+        type="range"
+        name="range"
+        id="myProgressBar"
+        value="0"
+        min="0"
+        max="100"
+      />
       <div class="icon">
         <!-- icon -->
         <i class="bx bxs-rewind-circle"></i>
